--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -24,8 +24,19 @@
 				<button class="btn-filtrer-2">Filtrer les pièces sans description</button>
 				<br>
 				<p>Prix maximum:</p>
-				<input type="range" id="prix_max" name="prix_max"
-						   min="0" max="60" step="5">
+				<input type="range" id="prix_max" name="prix_max" min="0" max="60" step="5">
+				
+				<h3>Ajouter un avis</h3>
+				<form class="formulaire-avis">
+					Identifiant de la pièce :<br>
+					<input type="number" name="piece-id"><br>
+					Nom d'utilisateur :<br>
+					<input type="text" name="utilisateur"><br>
+					Avis :<br>
+					<input type="text" name="commentaire"><br>
+					<button>Envoyer</button>
+					<input type="number" name="nbEtoiles" min="0" max="5"><br>
+				</form>
 			</section>
 
 			<!-- Fiches produits -->
